[metadata]
name = krokit
version = 0.0
description = Krokit
long_description = file: README.txt, CHANGES.txt
license = BSD-3-Clause
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
author = 
author_email = 
url =
keywords = web pyramid pylons

[options]
include_package_data = False
zip_safe = False
packages = find:
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_jinja2
    pyramid_debugtoolbar
    waitress
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov

[options.entry_points]
paste.app_factory =
    main = krokit:main
console_scripts =
    initialize_krokit_db = krokit.scripts.initialize_db:main
